首页内容增加
增加首页内容强调永久免费

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ Thumbs.db
 # Temporary files
 *.tmp
 *.temp
+mbti-homepage-desktop.jpg
+mbti-homepage-mobile-verified.jpg
+mbti-homepage-mobile.jpg
+mbti-homepage-verified.jpg
